<resources>
    <string name="app_name">YiQiPao</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>


    <string name="app_title">一起跑</string>
    <string name="start_trace">开始</string>
    <string name="stop_trace">停止</string>
    <string name="select_date">日期</string>
    <string name="fence_operator">操作</string>
    <string name="is_processed">纠偏</string>
    <string name="track_distance">里程</string>
    <string name="geo_fence">地理围栏</string>
    <string name="track_upload">跑步</string>
    <string name="track_query">历史</string>
    <string name="history_track">  查询历史轨迹</string>
    <string name="realtime_track">查询实时轨迹</string>
    <string name="circular_fence">圆形围栏</string>
    <string name="vertexes_fence">多边形围栏</string>
    <string name="delete_fence">删除围栏</string>
    <string name="fence_list">围栏列表</string>
    <string name="monitored_status">监控状态</string>
    <string name="history_alarm">历史报警</string>
    <string name="delay_alarm">延迟报警</string>
    <string name="fence_name">围栏名称</string>
    <string name="fence_desc">围栏描述</string>
    <string name="set_fence">设置围栏</string>
    <string name="fence_radius">围栏半径(单位：米)</string>
    <string name="vertex_number">顶点数量</string>
    <string name="fence_precision">去噪精度(单位：米)</string>
    <string name="fence_type">围栏类型</string>
    <string name="server_fence">服务端围栏</string>
    <string name="local_fence">本地围栏</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="circular_fence_caption">请点击地图标记围栏圆心</string>
    <string name="vertexes_fence_caption">请按顺时针或逆时针方向点击地图</string>
    <string name="exe_plan">锻炼计划</string>
    <string name="person_info">个人信息</string>
    <string name="about_app">关于app</string>



    <string name="explain">有人通过附近的人想和你一起跑步啦！快点击按钮和对方联系吧～</string>
    <string name="history_distance">历史记录</string>
    <string name="setting_item">设置</string>
    <string name="switch_item">切换账号</string>
    <string name="icon_desc">校园跑</string>
    <string name="content_desc">一个满足你所有跑步需求的APP</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登陆</string>
    <string name="tv_actionbar_register">注册</string>
    <string name="tv_actionbar_forget_pwd">忘记密码</string>
    <string name="tv_actionbar_quick_login">快捷登录</string>
    <string name="register_phone_hint_et">请输入您的中国大陆手机号</string>
    <string name="register_verification_hint_et">请输入验证码</string>
    <string name="register_btn_submit">注册</string>
    <string name="forget_pwd_btn_submit">重置</string>
    <string name="quick_login_btn_submit">登录</string>
    <string name="get_verification_code_tv">获取验证码</string>
    <string name="tool_bar_login">登陆</string>
    <string name="tool_bar_reset_pwd">重置密码</string>
    <string name="new_login_tv">登陆</string>
    <string name="new_reset_login">确认修改</string>
    <string name="new_login_psd_et">请填写密码</string>
    <string name="new_reset_pwd_old">请输入原密码</string>
    <string name="new_reset_pwd_new_again">请确认新密码</string>
    <string name="new_reset_pwd_new">请输入新密码</string>
    <string name="new_login_account_et">请输入手机号</string>
    <string name="new_login_account">请输入账号</string>
    <string name="new_register_pwd">请输入密码</string>
    <string name="new_register_pwd_again">请确认密码</string>
    <string name="forget_pwd_tv">登陆遇到问题？</string>
    <string name="quick_login_tv">手机号快捷登陆</string>
    <string name="goto_register_tv">立即注册</string>
    <string name="user_info_run_count">累计跑步次数</string>
    <string name="user_info_run_distance">累计跑步里程</string>
    <string name="edit_info">编辑资料</string>
    <string name="gps">GPS</string>


    <!--GPS 提示-->
    <string name="gps_def_prompt">GPS未开启，无法记录轨迹</string>
    <string name="gps_search_small">信号弱，记录可能不准确</string>
    <string name="gps_search_middle"></string>
    <string name="gps_search_strong"></string>
    <string name="run_data_km_default">0.00</string>
    <string name="run_data_km_unit">里程(公里)</string>
    <string name="run_data_time_default">00:00:00</string>
    <string name="run_data_time_text">时长</string>
    <string name="run_data_speed_text">配速(分钟/公里)</string>
    <string name="run_data_speed_default">00\'00\'\'</string>
    <string name="run_btn_text_stop">结束</string>
    <string name="run_btn_text_pause">暂停</string>
    <string name="run_btn_text_start">继续</string>
    <string name="history_distance_str">历史路程</string>
    <string name="def_date">2017年9月\n21日18:20</string>
    <string name="his_text_distance">公里</string>
    <string name="dis_time_def">用时</string>
    <string name="his_speed_text">配速</string>
    <string name="his_avspeed_text">平均配速</string>
    <string name="def_calorie">0</string>
    <string name="def_calorie_text">大卡</string>
    <string name="def_his_distance">0.00</string>
    <string name="def_his_detail_distance">00:00:00</string>
    <string name="his_slow_speed_text">最慢配速:</string>
    <string name="his_fast_speed_text">最快配速:</string>
    <string name="his_title">运动详情</string>
    <string name="his_distance_text">公里</string>
    <string name="his_def_prompt">还没完成今天的任务哦：）继续加油</string>
    <string name="change_user_info">修改资料</string>
    <string name="change_user_nickname">用户名</string>
    <string name="change_user_sex">性别</string>
    <string name="change_user_height">身高</string>
    <string name="change_user_weight">体重</string>
    <string name="chang_user_defstr">点击设置</string>
    <string name="change_user_save">保存修改</string>


</resources>
