<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/second_item"
            android:icon="@drawable/plan_z"
            android:title="@string/exe_plan"/>
        <item
            android:id="@+id/third_item"
            android:icon="@drawable/distance_z"
            android:title="@string/history_distance"/>
        <item
            android:id="@+id/about_item"
            android:icon="@drawable/about"
            android:title="@string/about_app" />
    </group>


    <item android:title="@string/setting_item">
        <menu>
            <item
                android:icon="@drawable/switch_item"
                android:id="@+id/switch_item"
                android:title="@string/switch_item"/>
        </menu>
    </item>

</menu>