<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:background="#FFFFFF"
        android:textColor="#0000D8" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_datetime"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dip"
        android:background="#FFFFFF"
        android:text="@string/select_date"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_isprocessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_date"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dip"
        android:background="#FFFFFF"
        android:text="@string/is_processed"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_isprocessed"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dip"
        android:background="#FFFFFF"
        android:text="@string/track_distance"
        android:textColor="#000000" />

</RelativeLayout>