<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_entityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:background="#FFFFFF"
        android:textColor="#0000D8" />

    <Button
        android:id="@+id/btn_startTrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_entityName"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dip"
        android:background="#FFFFFF"
        android:text="@string/start_trace"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_stopTrace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_startTrace"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dip"
        android:background="#FFFFFF"
        android:text="@string/stop_trace"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_stopTrace"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:text="@string/fence_operator"
        android:textColor="#000000" />

</RelativeLayout>